Some more work on Post Here article

--- a/ds/interview_prep/practice/post_here/post_here_2-full.ipynb
+++ b/ds/interview_prep/practice/post_here/post_here_2-full.ipynb
@@ -102,7 +102,7 @@
     "\n",
     "Reddit is an expansive site. Anyone who has spent any significant amount of time on it knows what I mean. There is a subreddit for seemingly every topic anyone could ever want to discuss or even think about (and many that most do not want think about).\n",
     "\n",
-    "Reddit is a powerful site. It is a tool for connecting and sharing information with like- or unlike-minded individuals around the world. When used well, it can help one accomplish things. \n",
+    "Reddit is a powerful site; a tool for connecting and sharing information with like- or unlike-minded individuals around the world. When used well, it can be a very useful resource.\n",
     "\n",
     "On the other hand, the deluge of information that's constantly piling into the pages of can be overwhelming and lead to wasted time. As with any tool, it can be used for good or for not-so-good.\n",
     "\n",
@@ -132,7 +132,7 @@
     "\n",
     "The goal with the Post Here app, as mentioned, is to provide a tool that makes it quick and easy to find the most appropriate subreddits for any given post. A user would simply provide the title and text of the their prospective post and the app would provide the user with a list of subreddit recommendations.\n",
     "\n",
-    "Recommendations would be provided by a model trained on a large dataset of reddit posts.\n",
+    "Recommendations are produced by a model attempts to predict which subreddit a given post would belong to. The model was built using Scikit-learn, and was trained on a large dataset of reddit posts. In order to serve the recommendations to the web app, an API was built using Flask and deployed to Heroku.\n",
     "\n",
     "The live version of the app is linked below.\n",
     "\n",
@@ -145,8 +145,20 @@
    "source": [
     "### My Role\n",
     "\n",
-    "I worked as a machine learning engineer on the Post Here app with a remote interdisciplinary team of data scientists, machine learning engineers, and web developers.\n",
-    "\n"
+    "I worked on the Post Here app with a remote, interdisciplinary team of data scientists, machine learning engineers, and web developers. I was the sole machine learning engineer on the team, responsible for the entire process of building and training the machine learning models.\n",
+    "\n",
+    "The main challenge I ran into, which directed the iterative process, was scope and dimensionality management.\n",
+    "\n",
+    "At this point in my machine learning journey, this was one of the larger datasets that I'd taken on. Uncompressed, the dataset we used was over 800mb of mostly natural language text.\n",
+    "\n",
+    "One aspect of natural language processing to keep in mind with such a dataset is the curse of dimensionality. When processed, a natural language dataset of this size would likely fall prey to the curse of dimensionality and prove somewhat unwieldy without large amounts of processing power.\n",
+    "\n",
+    "I was forced to research and apply various methods of addressing this problem in order to fit the resulting models on the free Heroku Dyno (500mb) while preserving adequate performance.\n",
+    "\n",
+    "One important way I had to wrangle with scope management was in deciding how many classes to try and predict. The original dataset contains data for 1,000 subreddits. It was not within the scope of a a four-day project to build a classification model of a caliber that could accurately classify 1,000 classes.\n",
+    "\n",
+    "In the beginning, I did try to build a basic model trained on all 1,000 classes. But with the time and processing power I had, it proved to be untenable. In the end, I settled for a model that classified text into 200 subreddits with a test accuracy of over 90%.\n",
+    "[review after re-validating]"
    ]
   },
   {
@@ -162,23 +174,133 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The dataset we ended up using to train the recommendation system is called the [Reddit Self-Post Classification Task dataset](https://www.kaggle.com/mswarbrickjones/reddit-selfposts), available on Kaggle thanks to Evolution AI. Here is a [blog post](https://evolution.ai//blog/page/5/an-imagenet-like-text-classification-task-based-on-reddit-posts/) about the dataset.\n",
+    "The dataset we ended up using to train the recommendation system is called the [Reddit Self-Post Classification Task dataset](https://www.kaggle.com/mswarbrickjones/reddit-selfposts), available on Kaggle thanks to Evolution AI. The full dataset clocks in at over 800mb, containing 1,013,000 rows: 1,000 posts each from 1,013 subreddits.\n",
     "\n",
-    "The full dataset clocks in at over 800mb, and includes 1,013,000 rows: 1,000 posts each from 1,013 subreddits."
+    "The data was posted to reddit between June 2016 and June 2018.\n",
+    "\n",
+    "[more info from the article]\n",
+    "\n",
+    "For more details on the dataset, refer to Evolution AI's [blog post](https://evolution.ai//blog/page/5/an-imagenet-like-text-classification-task-based-on-reddit-posts/)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Wrangling"
+    "### Wrangling\n",
+    "\n",
+    "As seems to be common with NLP projects, the process of wrangling the data was very much intertwined with the modeling process. Of course, this could be said about any machine learning project. However, I feel like it is particularly so in the case of NLP.\n",
+    "\n",
+    "Therefore, this section—the one dedicated to data wrangling only—will be rather brief and basic. I go into much more detail in the Modeling section."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1013000, 4)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>subreddit</th>\n",
+       "      <th>title</th>\n",
+       "      <th>selftext</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>6d8knd</td>\n",
+       "      <td>talesfromtechsupport</td>\n",
+       "      <td>Remember your command line switches...</td>\n",
+       "      <td>Hi there,  &lt;lb&gt;The usual. Long time lerker, first time poster, be kind etc. Sorry if this isn't the right place...&lt;lb&gt;&lt;lb&gt;Alright. Here's the story. I'm an independent developer who produces my ow...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>58mbft</td>\n",
+       "      <td>teenmom</td>\n",
+       "      <td>So what was Matt \"addicted\" to?</td>\n",
+       "      <td>Did he ever say what his addiction was or is he still chugging beers while talking about how sober he is?&lt;lb&gt;&lt;lb&gt;Edited to add: As an addict myself, anyone I know whose been an addict doesn't drin...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>8f73s7</td>\n",
+       "      <td>Harley</td>\n",
+       "      <td>No Club Colors</td>\n",
+       "      <td>Funny story. I went to college in Las Vegas. This was before I knew anything about motorcycling whatsoever. Me and some college buddies would always go out on the strip to the dance clubs. We alwa...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>6ti6re</td>\n",
+       "      <td>ringdoorbell</td>\n",
+       "      <td>Not door bell, but floodlight mount height.</td>\n",
+       "      <td>I know this is a sub for the 'Ring Doorbell' but has anyone used the Floodlight?  I already have the wire and existing bracket for the floodlight on the back of my house, but the problem is that i...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>77sxto</td>\n",
+       "      <td>intel</td>\n",
+       "      <td>Worried about my 8700k small fft/data stress results...</td>\n",
+       "      <td>Prime95 (regardless of version) and OCCT both, the \"small\" tests (including those parts of blend) make my temps shoot up to 100c+/throttling even at pure stock with MCE off instantaneously (I find...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       id             subreddit  \\\n",
+       "0  6d8knd  talesfromtechsupport   \n",
+       "1  58mbft               teenmom   \n",
+       "2  8f73s7                Harley   \n",
+       "3  6ti6re          ringdoorbell   \n",
+       "4  77sxto                 intel   \n",
+       "\n",
+       "                                                     title  \\\n",
+       "0                   Remember your command line switches...   \n",
+       "1                          So what was Matt \"addicted\" to?   \n",
+       "2                                           No Club Colors   \n",
+       "3              Not door bell, but floodlight mount height.   \n",
+       "4  Worried about my 8700k small fft/data stress results...   \n",
+       "\n",
+       "                                                                                                                                                                                                  selftext  \n",
+       "0  Hi there,  <lb>The usual. Long time lerker, first time poster, be kind etc. Sorry if this isn't the right place...<lb><lb>Alright. Here's the story. I'm an independent developer who produces my ow...  \n",
+       "1  Did he ever say what his addiction was or is he still chugging beers while talking about how sober he is?<lb><lb>Edited to add: As an addict myself, anyone I know whose been an addict doesn't drin...  \n",
+       "2  Funny story. I went to college in Las Vegas. This was before I knew anything about motorcycling whatsoever. Me and some college buddies would always go out on the strip to the dance clubs. We alwa...  \n",
+       "3  I know this is a sub for the 'Ring Doorbell' but has anyone used the Floodlight?  I already have the wire and existing bracket for the floodlight on the back of my house, but the problem is that i...  \n",
+       "4  Prime95 (regardless of version) and OCCT both, the \"small\" tests (including those parts of blend) make my temps shoot up to 100c+/throttling even at pure stock with MCE off instantaneously (I find...  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# === Load the dataset === #\n",
     "rspct = pd.read_csv(\"assets/data/rspct.tsv\", sep=\"\\t\")\n",
@@ -187,13 +309,83 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "#### Nulls\n",
+    "\n",
+    "Kaggle says that 12% of the subreddit column is null. If that is indeed the case, they did not get read into the dataframe correctly."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "id           0\n",
+       "subreddit    0\n",
+       "title        0\n",
+       "selftext     0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# === Null values === #\n",
     "rspct.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['talesfromtechsupport', 'teenmom', 'Harley', ..., 'halo',\n",
+       "       'gtaonline', 'mead'], dtype=object)"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# === Get list of subreddits === #\n",
+    "subreddits = df1[\"subreddit\"].unique()\n",
+    "subreddits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(200,)"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# === Prune list of subreddits === #\n",
+    "num_classes = 200\n",
+    "sub_small = subreddits[:num_classes]\n",
+    "sub_small.shape"
    ]
   },
   {
@@ -223,6 +415,36 @@
    "source": [
     "### Exploration"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# === The list of subreddits === #"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -334,6 +556,8 @@
    "source": [
     "### Dimensionality Reduction\n",
     "\n",
+    "...and Feature Selection\n",
+    "\n",
     "* Large dataset = tons of text features\n",
     "* Dimensionality reduction techniques\n",
     "  * Chi^2 & SelectKBest"
@@ -371,13 +595,6 @@
     "\n",
     "X_train_select.shape, X_test_select.shape"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -420,6 +637,13 @@
     "rfc = RandomForestClassifier(max_depth=32, n_jobs=-1, n_estimators=200)\n",
     "rfc.fit(X_train, y_train)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -513,17 +737,59 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "### Scope Management, Revisited\n",
+    "\n",
+    "[Potential improvements to the models here]\n",
+    "\n",
+    "* Classifying first into category, then by specific subreddit"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
