Rearranged into monthly directories and edited template

--- a/ds/practice/daily_ds_practice/template_daily_ds_practice.ipynb
+++ b/ds/practice/daily_ds_practice/template_daily_ds_practice.ipynb
@@ -10,25 +10,20 @@
     "\n",
     "## Daily Practices\n",
     "\n",
-    "* Practice with the common DS/ML tools and processes\n",
+    "* Practice with DS/ML tools and processes\n",
+    "  * [fast.ai course](https://course.fast.ai/)\n",
     "  * HackerRank SQL or Packt SQL Data Analytics\n",
-    "  * Try to hit benchmark accuracies with [UCI ML datasets](https://archive.ics.uci.edu/ml/index.php)\n",
-    "  * Kaggle\n",
-    "  * Hands-on ML with sklearn, Keras, and TensorFlow\n",
+    "  * Hands-on ML | NLP In Action | Dive Into Deep Learning\n",
     "    * Read, code along, take notes\n",
     "    * _test yourself on the concepts_ — i.e. do all the chapter exercises\n",
-    "  * [fast.ai course](https://course.fast.ai/)\n",
-    "  * Packt Workshops\n",
+    "  * Try to hit benchmark accuracies with [UCI ML datasets](https://archive.ics.uci.edu/ml/index.php) or Kaggle\n",
+    "* Meta Data: Review and write\n",
+    "  * Focus on a topic, review notes and resources, write a blog post about it\n",
+    "* 2-Hour Job Search\n",
     "* Interviewing\n",
     "  * Behavioral questions and scenarios\n",
     "  * Business case walk-throughs\n",
-    "  * Hot-seat DS-related topics for recall practice (under pressure)\n",
-    "* Meta Data: Review and write\n",
-    "  * Focus on a topic, review notes and resources, write a blog post about it\n",
-    "* Job sourcing\n",
-    "  * Networking\n",
-    "  * LinkedIn\n",
-    "  * Indeed"
+    "  * Hot-seat DS-related topics for recall practice (under pressure)"
    ]
   },
   {
@@ -73,10 +68,9 @@
     "## DS + ML Practice\n",
     "\n",
     "* Pick a dataset and try to do X with it\n",
-    "  * Try to hit benchmark accuracies with [UCI ML datasets](https://archive.ics.uci.edu/ml/index.php)\n",
-    "  * Kaggle\n",
+    "  * Try to hit benchmark accuracies with [UCI ML datasets](https://archive.ics.uci.edu/ml/index.php) or Kaggle\n",
     "* Practice with the common DS/ML tools and processes\n",
-    "  * Hands-on ML with sklearn, Keras, and TensorFlow\n",
+    "  * Hands-on ML | NLP In Action | Dive Into Deep Learning\n",
     "  * Machine learning flashcards\n",
     "\n",
     "#### _The goal is to be comfortable explaining the entire process._\n",
