--- a/ds/practice/daily_practice/template_daily_ds_practice.ipynb
+++ b/ds/practice/daily_practice/template_daily_ds_practice.ipynb
@@ -4,8 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 20-XX-XX: Daily Data Practice\n",
-    "\n",
+    "# 20-XX-XX: Daily Data Practice"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "---\n",
     "\n",
     "## Daily Practices\n",
@@ -32,31 +37,37 @@
    "source": [
     "---\n",
     "\n",
-    "## Writing\n",
+    "## Coding\n",
     "\n",
-    "> Focus on a topic or project, learn/review the concepts, and write a blog post about it\n",
-    "\n"
+    "> Work through practice problems on HackerRank or similar"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "### Python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
-    "\n",
-    "## SQL\n",
-    "\n",
-    "> Work through practice problems on HackerRank or Packt"
+    "### SQL"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
@@ -76,8 +87,6 @@
     "#### _The goal is to be comfortable explaining the entire process._\n",
     "\n",
     "* Data access / sourcing, cleaning\n",
-    "  * SQL\n",
-    "  * Pandas\n",
     "  * Exploratory data analysis\n",
     "  * Data wrangling techniques and processes\n",
     "* Inference\n",
@@ -98,53 +107,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "---\n",
     "\n",
-    "## Interviewing\n",
+    "## Meta Data: Review and Write\n",
     "\n",
-    "> Practice answering the most common interview questions\n",
-    "\n",
-    "Technical\n",
-    "\n",
-    "* Business case walk-throughs\n",
-    "* Hot-seat DS-related topics for recall practice (under pressure)\n",
-    "\n",
-    "Behavioral\n",
-    "\n",
-    "* \"Tell me a bit about yourself\"\n",
-    "* \"Tell me about a project you've worked on and are proud of\"\n",
-    "* \"What do you know about our company?\"\n",
-    "* \"Where do you see yourself in 3-5 years?\"\n",
-    "* \"Why do you want to work here / want this job?\"\n",
-    "* \"What makes you most qualified for this role?\"\n",
-    "* \"What is your greatest strength/weakness?\"\n",
-    "  * \"What is your greatest technical strength?\"\n",
-    "* \"Tell me about a time when you had conflict with someone and how you handled it\"\n",
-    "* \"Tell me about a mistake you made and how you handled it\"\n",
-    "* \"Do you have any questions for me?\"\n",
-    "  * What is your favorite aspect of working here?\n",
-    "  * What has your journey looked like at the company?\n",
-    "  * What are some challenges you face in your position?\n",
-    "* Scenario questions (STAR: situation, task, action, result)\n",
-    "  * Success story / biggest accomplishment\n",
-    "  * Greatest challenge (overcome)\n",
-    "  * Persuaded someone who did not agree with you\n",
-    "  * Dealt with and resolved a conflict (among team members)\n",
-    "  * Led a team / showed leadership skills or aptitude\n",
-    "  * How you've dealt with stress / stressful situations\n",
-    "  * Most difficult problem encountered in previous job; how you solved it\n",
-    "  * Solved a problem creatively\n",
-    "  * Exceeded expectations to get a job done\n",
-    "  * Showed initiative\n",
-    "  * Something that's not on your resume\n",
-    "  * Example of important goal you set and how you reached it\n",
-    "  * A time you failed"
+    "> Focus on a topic or project, learn/review the concepts, and write a blog post about it\n",
+    "\n"
    ]
   },
   {
@@ -158,9 +127,68 @@
    "source": [
     "---\n",
     "\n",
-    "## Job sourcing\n",
+    "## Interviewing\n",
     "\n",
-    "> Browse LinkedIn, Indeed, and connections for promising leads"
+    "> Practice answering the most common interview questions\n",
+    "\n",
+    "### Technical\n",
+    "\n",
+    "* Business case walk-throughs\n",
+    "* Hot-seat DS-related topics for recall practice (under pressure)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
+   "source": [
+    "### Behavioral\n",
+    "\n",
+    "* \"Tell me a bit about yourself\"\n",
+    "* \"Tell me about a project you've worked on and are proud of\"\n",
+    "* \"What do you know about our company?\"\n",
+    "* \"Where do you see yourself in 3-5 years?\"\n",
+    "* \"Why do you want to work here / want this job?\"\n",
+    "* \"What makes you most qualified for this role?\"\n",
+    "* \"What is your greatest strength/weakness?\"\n",
+    "  * \"What is your greatest technical strength?\"\n",
+    "* \"Tell me about a time when you had conflict with someone and how you handled it\"\n",
+    "* \"Tell me about a mistake you made and how you handled it\"\n",
+    "* Scenario questions (STAR: situation, task, action, result)\n",
+    "  * Success story / biggest accomplishment\n",
+    "  * Greatest challenge (overcome)\n",
+    "  * Persuaded someone who did not agree with you\n",
+    "  * Dealt with and resolved a conflict (among team members)\n",
+    "  * Led a team / showed leadership skills or aptitude\n",
+    "  * How you've dealt with stress / stressful situations\n",
+    "  * Most difficult problem encountered in previous job; how you solved it\n",
+    "  * Solved a problem creatively\n",
+    "  * Exceeded expectations to get a job done\n",
+    "  * Showed initiative\n",
+    "  * Something that's not on your resume\n",
+    "  * Example of important goal you set and how you reached it\n",
+    "  * A time you failed\n",
+    "* \"Do you have any questions for me?\"\n",
+    "  * What is your favorite aspect of working here?\n",
+    "  * What has your journey looked like at the company?\n",
+    "  * What are some challenges you face in your position?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "## 2-Hour Job Search"
    ]
   },
   {
