Updated template and organized data and notebooks

--- a/ds/practice/daily_practice/template_daily_ds_practice.ipynb
+++ b/ds/practice/daily_practice/template_daily_ds_practice.ipynb
@@ -112,8 +112,7 @@
     "\n",
     "## Meta Data: Review and Write\n",
     "\n",
-    "> Focus on a topic or project, learn/review the concepts, and write a blog post about it\n",
-    "\n"
+    "> Focus on a topic or project, learn/review the concepts, write (a blog post) about it"
    ]
   },
   {
@@ -129,7 +128,7 @@
     "\n",
     "## Interviewing\n",
     "\n",
-    "> Practice answering the most common interview questions\n",
+    "> Practice answering the most common behavioral and technical interview questions\n",
     "\n",
     "### Technical\n",
     "\n",
