Added coursera to practice resources

--- a/ds/practice/daily_practice/template_daily_ds_practice.ipynb
+++ b/ds/practice/daily_practice/template_daily_ds_practice.ipynb
@@ -18,7 +18,7 @@
     "* Practice with DS/ML tools and processes\n",
     "  * [fast.ai course](https://course.fast.ai/)\n",
     "  * HackerRank SQL or Packt SQL Data Analytics\n",
-    "  * Hands-on ML | NLP In Action | Dive Into Deep Learning\n",
+    "  * Hands-on ML | NLP In Action | Dive Into Deep Learning | Coursera / guided projects\n",
     "    * Read, code along, take notes\n",
     "    * _test yourself on the concepts_ — i.e. do all the chapter exercises\n",
     "  * Try to hit benchmark accuracies with [UCI ML datasets](https://archive.ics.uci.edu/ml/index.php) or Kaggle\n",
@@ -81,7 +81,7 @@
     "* Pick a dataset and try to do X with it\n",
     "  * Try to hit benchmark accuracies with [UCI ML datasets](https://archive.ics.uci.edu/ml/index.php) or Kaggle\n",
     "* Practice with the common DS/ML tools and processes\n",
-    "  * Hands-on ML | NLP In Action | Dive Into Deep Learning\n",
+    "  * Hands-on ML | NLP In Action | Dive Into Deep Learning | Coursera / guided projects\n",
     "  * Machine learning flashcards\n",
     "\n",
     "#### _The goal is to be comfortable explaining the entire process._\n",
