Updated daily template - coding and problem solving

--- a/ds/practice/daily_practice/template_daily_ds_practice.ipynb
+++ b/ds/practice/daily_practice/template_daily_ds_practice.ipynb
@@ -17,11 +17,13 @@
     "\n",
     "* Practice with DS/ML tools and processes\n",
     "  * [fast.ai course](https://course.fast.ai/)\n",
-    "  * HackerRank SQL or Packt SQL Data Analytics\n",
     "  * Hands-on ML | NLP In Action | Dive Into Deep Learning | Coursera / guided projects\n",
     "    * Read, code along, take notes\n",
     "    * _test yourself on the concepts_ — i.e. do all the chapter exercises\n",
     "  * Try to hit benchmark accuracies with [UCI ML datasets](https://archive.ics.uci.edu/ml/index.php) or Kaggle\n",
+    "* Coding & Problem Solving Practice\n",
+    "  * HackerRank SQL or Packt SQL Data Analytics\n",
+    "  * Python on HackerRank or similar platform\n",
     "* Meta Data: Review and write\n",
     "  * Focus on a topic, review notes and resources, write a blog post about it\n",
     "* 2-Hour Job Search\n",
@@ -37,7 +39,7 @@
    "source": [
     "---\n",
     "\n",
-    "## Coding\n",
+    "## Coding & Problem Solving Practice\n",
     "\n",
     "> Work through practice problems on HackerRank or similar"
    ]
