Updated images because of issue with database migration

--- a/ds/projects/self_labs/recount/notebooks/01-image_collection.ipynb
+++ b/ds/projects/self_labs/recount/notebooks/01-image_collection.ipynb
@@ -15,6 +15,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
+    "\n",
+    "## Fast AI - Lesson 1\n",
+    "\n",
+    "* [Video](https://course.fast.ai/videos/?lesson=1)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
     "## Packages\n",
     "\n",
     "### fastclass\n",
