--- a/ds/practice/daily_practice/template_daily_ds_practice.ipynb
+++ b/ds/practice/daily_practice/template_daily_ds_practice.ipynb
@@ -23,7 +23,7 @@
     "  * Try to hit benchmark accuracies with [UCI ML datasets](https://archive.ics.uci.edu/ml/index.php) or Kaggle\n",
     "* Coding & Problem Solving Practice\n",
     "  * HackerRank SQL or Packt SQL Data Analytics\n",
-    "  * Python on HackerRank or similar platform\n",
+    "  * Python on HackerRank, Leetcode, course, or book (on algorithms, data structures, advanced topics)\n",
     "* Meta Data: Review and write\n",
     "  * Focus on a topic, review notes and resources, write a blog post about it\n",
     "* 2-Hour Job Search\n",
@@ -41,7 +41,7 @@
     "\n",
     "## Coding & Problem Solving Practice\n",
     "\n",
-    "> Work through practice problems on HackerRank or similar"
+    "> HackerRank, Leetcode, course, or book on algorithms, data structures, or advanced dev topics"
    ]
   },
   {
