Simplified the daily practice template again

--- a/ds/practice/daily_practice/template_daily_ds_practice.ipynb
+++ b/ds/practice/daily_practice/template_daily_ds_practice.ipynb
@@ -15,22 +15,11 @@
     "\n",
     "## Daily Practices\n",
     "\n",
-    "* Practice with DS/ML tools and processes\n",
-    "  * [fast.ai course](https://course.fast.ai/)\n",
-    "  * Hands-on ML | NLP In Action | Dive Into Deep Learning | Coursera / guided projects\n",
-    "    * Read, code along, take notes\n",
-    "    * _test yourself on the concepts_ — i.e. do all the chapter exercises\n",
-    "  * Try to hit benchmark accuracies with [UCI ML datasets](https://archive.ics.uci.edu/ml/index.php) or Kaggle\n",
-    "* Coding & Problem Solving Practice\n",
-    "  * HackerRank SQL or Packt SQL Data Analytics\n",
-    "  * Python on HackerRank, Leetcode, course, or book (on algorithms, data structures, advanced topics)\n",
-    "* Meta Data: Review and write\n",
-    "  * Focus on a topic, review notes and resources, write a blog post about it\n",
-    "* 2-Hour Job Search\n",
-    "* Interviewing\n",
-    "  * Behavioral questions and scenarios\n",
-    "  * Business case walk-throughs\n",
-    "  * Hot-seat DS-related topics for recall practice (under pressure)"
+    "* [ ] Practice with DS/ML tools and processes\n",
+    "* [ ] Coding & Problem Solving Practice\n",
+    "* [ ] Meta Data: Review and write\n",
+    "* [ ] 2-Hour Job Search\n",
+    "* [ ] Interviewing"
    ]
   },
   {
@@ -41,7 +30,8 @@
     "\n",
     "## Coding & Problem Solving Practice\n",
     "\n",
-    "> HackerRank, Leetcode, course, or book on algorithms, data structures, or advanced dev topics"
+    "* HackerRank or Leetcode\n",
+    "* Course or book on algorithms, data structures, or dev topics"
    ]
   },
   {
