--- a/ds/practice/daily_practice/template_daily_ds_practice.ipynb
+++ b/ds/practice/daily_practice/template_daily_ds_practice.ipynb
@@ -15,11 +15,12 @@
     "\n",
     "## Daily Practices\n",
     "\n",
-    "* [ ] Practice with DS/ML tools and processes\n",
     "* [ ] Coding & Problem Solving Practice\n",
-    "* [ ] Meta Data: Review and write\n",
+    "* [ ] Practice & Learn - Data Science\n",
+    "* [ ] Practice & Learn - Machine Learning\n",
+    "* [ ] Meta Data: Review & Write\n",
     "* [ ] 2-Hour Job Search\n",
-    "* [ ] Interviewing"
+    "* [ ] Interview Practice"
    ]
   },
   {
@@ -28,10 +29,7 @@
    "source": [
     "---\n",
     "\n",
-    "## Coding & Problem Solving Practice\n",
-    "\n",
-    "* HackerRank or Leetcode\n",
-    "* Course or book on algorithms, data structures, or dev topics"
+    "## Coding & Problem Solving Practice"
    ]
   },
   {
@@ -76,38 +74,7 @@
    "source": [
     "---\n",
     "\n",
-    "## DS + ML Practice"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
-   "source": [
-    "### Some options\n",
-    "\n",
-    "* Pick a dataset and try to do X with it\n",
-    "  * Try to hit benchmark accuracies with [UCI ML datasets](https://archive.ics.uci.edu/ml/index.php) or Kaggle\n",
-    "* Practice with the common DS/ML tools and processes\n",
-    "  * Hands-on ML | NLP In Action | Dive Into Deep Learning | Coursera / guided projects\n",
-    "  * Machine learning flashcards\n",
-    "\n",
-    "#### _The goal is to be comfortable explaining the entire process._\n",
-    "\n",
-    "* Data access / sourcing, cleaning\n",
-    "  * Exploratory data analysis\n",
-    "  * Data wrangling techniques and processes\n",
-    "* Inference\n",
-    "  * Statistics\n",
-    "  * Probability\n",
-    "  * Visualization\n",
-    "* Modeling\n",
-    "  * Implement + justify choice of model / algorithm\n",
-    "  * Track performance + justify choice of metrics\n",
-    "    * Communicate results as relevant to the goal"
+    "## Practice + Learning - Data Science"
    ]
   },
   {
@@ -121,9 +88,21 @@
    "source": [
     "---\n",
     "\n",
-    "## Meta Data: Review and Write\n",
+    "## Practice & Learning - Machine Learning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
     "\n",
-    "> Focus on a topic or project, learn/review the concepts, write (a blog post) about it"
+    "## Meta Data: Review & Write"
    ]
   },
   {
@@ -161,54 +140,7 @@
    "source": [
     "---\n",
     "\n",
-    "## Interviewing\n",
-    "\n",
-    "> Practice answering the most common behavioral and technical interview questions\n",
-    "\n",
-    "### Technical\n",
-    "\n",
-    "* Business case walk-throughs\n",
-    "* Hot-seat DS-related topics for recall practice (under pressure)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
-   "source": [
-    "### Behavioral\n",
-    "\n",
-    "* \"Tell me a bit about yourself\"\n",
-    "* \"Tell me about a project you've worked on and are proud of\"\n",
-    "* \"What do you know about our company?\"\n",
-    "* \"Where do you see yourself in 3-5 years?\"\n",
-    "* \"Why do you want to work here / want this job?\"\n",
-    "* \"What makes you most qualified for this role?\"\n",
-    "* \"What is your greatest strength/weakness?\"\n",
-    "  * \"What is your greatest technical strength?\"\n",
-    "* \"Tell me about a time when you had conflict with someone and how you handled it\"\n",
-    "* \"Tell me about a mistake you made and how you handled it\"\n",
-    "* Scenario questions (STAR: situation, task, action, result)\n",
-    "  * Success story / biggest accomplishment\n",
-    "  * Greatest challenge (overcome)\n",
-    "  * Persuaded someone who did not agree with you\n",
-    "  * Dealt with and resolved a conflict (among team members)\n",
-    "  * Led a team / showed leadership skills or aptitude\n",
-    "  * How you've dealt with stress / stressful situations\n",
-    "  * Most difficult problem encountered in previous job; how you solved it\n",
-    "  * Solved a problem creatively\n",
-    "  * Exceeded expectations to get a job done\n",
-    "  * Showed initiative\n",
-    "  * Something that's not on your resume\n",
-    "  * Example of important goal you set and how you reached it\n",
-    "  * A time you failed\n",
-    "* \"Do you have any questions for me?\"\n",
-    "  * What is your favorite aspect of working here?\n",
-    "  * What has your journey looked like at the company?\n",
-    "  * What are some challenges you face in your position?"
+    "## Interview Practice"
    ]
   },
   {
