Short session on image seg model blog post

--- a/ds/projects/blog/image_segmentation_manipulation/image_seg_binary_mask.ipynb
+++ b/ds/projects/blog/image_segmentation_manipulation/image_seg_binary_mask.ipynb
@@ -8,9 +8,7 @@
     "\n",
     "> Create binary mask for objects in an image using image segmentation\n",
     "\n",
-    "A tobias.fyi blog post by...you guessed it: _Tobias Reaper_.\n",
-    "\n",
-    "---"
+    "A tobias.fyi blog post by...you guessed it: _Tobias Reaper_."
    ]
   },
   {
@@ -70,19 +68,35 @@
    "source": [
     "---\n",
     "\n",
-    "## Goal\n",
+    "## The Problem\n",
     "\n",
-    "The goal of this article is to describe a possible method of creating binary masks for one or more objects in an image by using an image segmentation (computer vision) model.\n",
+    "Selecting and separating parts of an image can be a tedious, time-consuming process. Anyone who's done a fair amount of tinkering with image manipulation using a program like Photoshop knows the struggle.\n",
     "\n",
-    "A binary mask is basically a two-color image with the same dimensions of the image that can be used to distinguish pixels in the original image.\n",
+    "As an example, say I'd like to cut out a person from a photo in order to \"Photoshop\" that person into a different image. A classic example is to put a friend who missed a get-together into the group photo from the event (I'm looking at you, BeeTee... =P).\n",
     "\n",
-    "One important use-case for something like this is to apply different effects or transformations to the foreground and background of the image, making it possible to easily manipulate background pixels without affecting the foreground. For example, blurring the background to give a greater depth of field effect, or removing the color from the background to make the foreground really pop out."
+    "[[ImageBlock :: Missing Friend]]\n",
+    "\n",
+    "To accomplish this, I'd spend anywhere from a few minutes to an hour outlining that person in the original image, mostly by hand. The time investment depends on how easily-separable that person is from the rest of the image, how accurate I want the cut to be, and what tools are available to me. Regarding that last point, the magicians at Adobe have done some rather impressive black magic with Photoshop, giving users very quick and very effective methods for selecting parts of an image.\n",
+    "\n",
+    "A mask is basically a method of distinguishing/selecting/separating pixels. That outline that I made to select my friend in Photoshop is an example of a mask. A binary mask is a method of masking which uses a two-tone color scheme, usually black and white, to indicate the different area(s) of an image. By overlaying a binary mask on top of the original image, the boundaries between the two colors can be used to affect the different areas of the image differently, whether that is making pixels transparent (removing them) or applying some sort of effect or transformation.\n",
+    "\n",
+    "The goal of this article is to describe a possible method of creating binary masks for one or more objects in an image by using an image segmentation (computer vision) model. Rather than drawing binary masks completely by hand, or use proprietary software like Photoshop, I will show you how to automate the process using completely free, open-source tools.\n",
+    "\n",
+    "> [[ImageBlock :: Binary Mask of Missing Friend - half regular image, half binary mask]]\n",
+    "\n",
+    "### Other use-cases\n",
+    "\n",
+    "Another important use-case for something like this is to apply different effects or transformations to the foreground and background of the image, making it possible to easily manipulate background pixels without affecting the foreground. For example, blurring the background to give a greater depth of field effect, or removing the color from the background to make the foreground really pop out."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
+    "\n",
+    "## Solution\n",
+    "\n",
     "### Computer vision\n",
     "\n",
     "In order to generate binary masks based on the content of the image, the algorithm must be somewhat intelligent. That is, it must be able to process the image in such a way that it can recognize where the foreground is and draw a polygon around it with some degree of accuracy.\n",
@@ -100,8 +114,43 @@
    "source": [
     "### Mask R-CNN\n",
     "\n",
-    "The primary model used in this article is Matterport's implementation of a Mask R-CNN (Regional Convolutional Neural Network). Although it hasn't changed much in the last couple years, it is still one of the best implementations of an image segmentation model out there today."
+    "Although the primary framework used in this article is Matterport's TensorFlow-based implementation of a Mask R-CNN, this process should be translatable to other image segmentation models as well. In fact, at the end of this post I go over using a PyTorch-based image segmentation framework called Detectron2 to accomplish the exact same thing."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
