Updated template outline

--- a/ds/practice/daily_practice/template_daily_ds_practice.ipynb
+++ b/ds/practice/daily_practice/template_daily_ds_practice.ipynb
@@ -12,15 +12,32 @@
    "metadata": {},
    "source": [
     "---\n",
+    "---\n",
     "\n",
-    "## Daily Practices\n",
+    "## Daily practices\n",
     "\n",
-    "* [ ] Coding & Problem Solving Practice\n",
-    "* [ ] Practice & Learn - Data Science\n",
-    "* [ ] Practice & Learn - Machine Learning\n",
-    "* [ ] Meta Data: Review & Write\n",
-    "* [ ] 2-Hour Job Search\n",
-    "* [ ] Interview Practice"
+    "* [ ] [Practice & learn](#Practice-&-learn)\n",
+    "  * [ ] Coding, algorithms & data structures\n",
+    "  * [ ] Data science: access, manipulation, analysis, visualization\n",
+    "  * [ ] Engineering: SQL, PySpark, APIs, TDD, OOP\n",
+    "  * [ ] Machine learning: Scikit-learn, TensorFlow, PyTorch\n",
+    "  * [ ] Interview questions (out loud)\n",
+    "* [ ] [Meta-data: reading & writing](#Meta-data:-reading-&-writing)\n",
+    "  * [ ] Blog\n",
+    "  * [ ] Social media discussions\n",
+    "* [ ] [2-Hour Job Search](#2-Hour-Job-Search)\n",
+    "  * [ ] LAMP List\n",
+    "  * [ ] Online networking"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "---\n",
+    "\n",
+    "## Practice & learn"
    ]
   },
   {
@@ -29,20 +46,8 @@
    "source": [
     "---\n",
     "\n",
-    "## Coding & Problem Solving Practice"
+    "### Coding, algorithms & data structures"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Python"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "code",
@@ -55,7 +60,94 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### SQL"
+    "---\n",
+    "\n",
+    "### Data science\n",
+    "\n",
+    "* Access\n",
+    "* Manipulation\n",
+    "* Analysis\n",
+    "* Visualization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "### Engineering\n",
+    "\n",
+    "* SQL\n",
+    "* PySpark\n",
+    "* APIs\n",
+    "* Test-driven development\n",
+    "* Object-oriented practice"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "### Machine learning\n",
+    "\n",
+    "* Scikit-learn\n",
+    "* TensorFlow / PyTorch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "### Interview questions\n",
+    "\n",
+    "> Answer common interview questions **_out loud_**.\n",
+    "\n",
+    "* Technical: DS, ML, SE\n",
+    "* Behavioral"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "---\n",
+    "\n",
+    "## Meta-data: reading & writing\n",
+    "\n",
+    "* Blog post\n",
+    "* Social media discussion"
    ]
   },
   {
@@ -73,95 +165,13 @@
    "metadata": {},
    "source": [
     "---\n",
-    "\n",
-    "## Practice + Learning - Data Science"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "---\n",
     "\n",
-    "## Practice & Learning - Machine Learning"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---\n",
+    "## 2-Hour Job Search\n",
     "\n",
-    "## Meta Data: Review & Write"
+    "* LAMP List\n",
+    "* Online networking"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---\n",
-    "\n",
-    "## 2-Hour Job Search"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---\n",
-    "\n",
-    "## Interview Practice"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "markdown",
