Worked on image segmentation blog post

--- a/ds/projects/blog/image_segmentation_manipulation/bg_removal.ipynb
+++ b/ds/projects/blog/image_segmentation_manipulation/bg_removal.ipynb
@@ -186,7 +186,7 @@
     "\n",
     "So I will start at line 36 and work my way down.\n",
     "\n",
-    "```py\n",
+    "```python\n",
     "import os\n",
     "import sys\n",
     "\n",
